# turtles

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  prompt_plan.md  spec.md  todo.md
benches/: performance_benchmarks.rs
resources/: AppIcon.icns
src/: app.rs  lib.rs  main.rs
src/config/: mod.rs  model.rs  tests.rs
src/data/: conversation.rs  logger.rs  mod.rs
src/ollama/: api.rs  mod.rs  models.rs
src/ui/: input.rs  mod.rs  presentation.rs  window.rs
src/utils/: logger.rs
tests/: app_test.rs  config_test.rs  conversation_test.rs  ollama_test.rs
